--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "async-cache": "^1.1.0",
     "consola": "^2.9.0",
-    "feed": "^4.0.0"
+    "feed": "git+https://github.com/sportsru/feed.git#enclosures"
   },
   "devDependencies": {
     "@commitlint/cli": "latest",
